(OSE) Fix right/left alignment in popovers.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -322,7 +322,7 @@ a.red:hover
 .center
   text-align: center
 .right
-  text-align: right !important
+  text-align: right
   
 .headline-caption
   font-size: 12px
@@ -356,3 +356,6 @@ a.red:hover
 
 .ui-datepicker .ui-icon-circle-triangle-e:before
   content: "\f054"
+
+.popover.right .popover-content, .popover.right .popover-title
+  text-align: left
